ajustes entorno local y modelos, migracion de datos
